--- a/Data_transformation.html
+++ b/Data_transformation.html
@@ -366,74 +366,11 @@ summary {
 </div>
 
 
-<div id="iii.-data-transformation" class="section level1">
-<h1>III. Data transformation</h1>
+<div id="data-transformation" class="section level1">
+<h1>Data transformation</h1>
 <p>The dataset has a <code>.RData</code> version, which we can directly load using R, therefore, we do not have to worry much about reading the data into R. However, we would like to change the data class of several columns to fit our study better.</p>
 <p>In the original data, all columns with fully numeric values will be considered as “numeric.” For example, the column <code>year</code> would be considered as numeric, and we don’t need to transform it further. However, the <code>type_of_violence</code> column will also be considered as numeric, in which it should be categorical. Therefore, we change the 1, 2, and 3 values in <code>type_of_violence</code> to categories – “state-based conflict”, “non-state conflict”, and &quot; one-sided violence.&quot; Further, we would like to change the <code>date_start</code> and <code>date_end</code> to the DateTime class.</p>
-<p>The dataset we chose is very larger, to save the space, we would like to reduce the dataset only with columns we are might be interested in。 The following are the variables and their explanations. Explanations are referred from the codebook of the dataset [<a href="https://ucdp.uu.se/downloads/ged/ged191.pdf">source</a>].</p>
-<table>
-<thead>
-<tr class="header">
-<th align="left">Variable</th>
-<th align="left">Explanation</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left">id</td>
-<td align="left">An unique ID identifying a conflict event</td>
-</tr>
-<tr class="even">
-<td align="left">date_start</td>
-<td align="left">The earliest possible date when the conflict event has taken place</td>
-</tr>
-<tr class="odd">
-<td align="left">date_end</td>
-<td align="left">The last possible date when the conflict event has taken place</td>
-</tr>
-<tr class="even">
-<td align="left">year</td>
-<td align="left">The year of the conflict event</td>
-</tr>
-<tr class="odd">
-<td align="left">active_year</td>
-<td align="left">1: belongs to an active conflict</td>
-</tr>
-<tr class="even">
-<td align="left">type_of_violence</td>
-<td align="left">1: state-based conflict (involved with a government of a state or any opposition organization or alliance of organizations); 2: non-state conflict (between organized armed groups); 3: one-sided violence (against civilians)</td>
-</tr>
-<tr class="odd">
-<td align="left">side_a/side_b</td>
-<td align="left">The name of the two sides</td>
-</tr>
-<tr class="even">
-<td align="left">longitude/latitude</td>
-<td align="left">Best estimated or the actual location of the conflict event takes place</td>
-</tr>
-<tr class="odd">
-<td align="left">country</td>
-<td align="left">Name of the country of the conflict event takes place</td>
-</tr>
-<tr class="even">
-<td align="left">region</td>
-<td align="left">Africa, Americas, Asia, Europe, Middle East</td>
-</tr>
-<tr class="odd">
-<td align="left">death_*</td>
-<td align="left">Best estimate of fatalities for the specific group</td>
-</tr>
-<tr class="even">
-<td align="left">best</td>
-<td align="left">Best estimate of fatalities resulting from the conflict event</td>
-</tr>
-<tr class="odd">
-<td align="left">high/low</td>
-<td align="left">The highest/lowest estimation of the total fatalities</td>
-</tr>
-</tbody>
-</table>
-<p>But in some instances, we may want to use the original dataset. The transformed dataset is stored in “data/clean/df_process.RData”.</p>
+<p>The dataset we chose is very larger, to save the space, we would like to reduce the dataset only with columns we are might be interested in (as described in Chapter 2). The transformed dataset is stored in “data/clean/df_process.RData”. But in certain instances, we may want to use the original dataset (for example, missing value analysis).</p>
 <p>In our study, we find the most extreme values of this dataset are related to the <a href="https://en.wikipedia.org/wiki/Rwandan_genocide">Rwanda genocide</a> in 1994, which we will have detailed explanations in the following sections. Sometimes, we need to include these records in our analysis, and sometimes we don’t. Therefore, we decide to have a data frame to record the unique conflict event ID of records related to the Rwanda genocide. Then we can quickly include and filter our these records in our future coding. The data frame is stored as “data/clean/df_rwa.RData”.</p>
 <p>For other transformations made for analysis and visualization, please refer to our code on GitHub <a href="https://github.com/tonyytliu/edav_final_project">repo</a>.</p>
 <p>In our project, we would also like to investigate the geographic or spatial pattern of the data. We use the <code>world</code> map data from ggplot’s map_data. However, some countries’ names in the <code>world</code> are different from what we have in the dataset. We want to modify the country name of <code>world</code> map data to make them identical with the name in our dataset. The following countries have different names. The modified <code>world</code> data file is stored as “data/clean/WorldData.RData”.</p>
