--- a/Interactive.html
+++ b/Interactive.html
@@ -374,12 +374,20 @@ summary {
 <p>The total numbers of deaths every year and every country are calculated using D3.</p>
 <p>Instructions for using the plot:</p>
 <ol style="list-style-type: decimal">
-<li>The plot may take a few seconds to initialize. The plot is initialized with a mapping of conflicts in the year of 2018 with no default country specified on the “earth”.</li>
-<li>Users can choose the country of their interests by choosing from the select bar on the top left. After selection, then on the top right part, there will be a text displaying the country name, the year, and the total death that year. If the country has at least one conflict during 1989 - 2018, there will be a bar chart showing up in the bottom.</li>
+<li>The plot may take a few seconds to initialize. The plot is initialized with a mapping of conflicts in the year of 2018 with no default country specified on the “earth”. Each dot on the map represents a conflict event with at least one death.</li>
+<li>Users can choose the country of their interests by choosing from the select bar on the top left. After selection, then on the top right part, there will be a text displaying the country name, the year, and the total death that year. If the country has at least one conflict event (the event may have 0 death) during 1989 - 2018, there will be a bar chart showing up in the bottom.</li>
 <li>Users can drag the “earth” if they want, if they hover the mouse over the land, the country name will be displayed.</li>
 <li>Users can select the year of interest on the top left part of the plot. If a different year is chosen, the circles will be redrawn, so please be patient.</li>
 <li>The total number of death is calculated using the “best” column in the dataset, which means the best estimate of the number of death.</li>
 <li>The dataset does not contain data from Syria. Therefore, conflict data in Syria is currently unavailable.</li>
+</ol>
+<p>Reference:</p>
+<ol style="list-style-type: decimal">
+<li>D3 in Depth: Geographic (<a href="https://www.d3indepth.com/geographic/" class="uri">https://www.d3indepth.com/geographic/</a>).</li>
+<li>World Map with D3 and TopoJSON (<a href="https://bl.ocks.org/piwodlaiwo/3734a1357696dcff203a94012646e932" class="uri">https://bl.ocks.org/piwodlaiwo/3734a1357696dcff203a94012646e932</a>).</li>
+<li>GeoJSON Maps of the globe (<a href="https://geojson-maps.ash.ms/" class="uri">https://geojson-maps.ash.ms/</a>).</li>
+<li>Johan’s github project:world.geo.json (<a href="https://github.com/johan/world.geo.json" class="uri">https://github.com/johan/world.geo.json</a>).</li>
+<li>A method for hiding points in geo projection (<a href="https://stackoverflow.com/questions/22366749/how-can-i-determine-if-a-point-is-hidden-on-a-projection" class="uri">https://stackoverflow.com/questions/22366749/how-can-i-determine-if-a-point-is-hidden-on-a-projection</a>).</li>
 </ol>
 </div>
 
