--- a/Interactive.html
+++ b/Interactive.html
@@ -370,7 +370,7 @@ summary {
 <h1>Interactive</h1>
 <p>This is the interactive part of our conflict anaylsis. We store the data in the github repo (<a href="https://github.com/sunyiyangallan/Conflict-Map" class="uri">https://github.com/sunyiyangallan/Conflict-Map</a>), the cleaned up that file and get df_d3.csv using R (as mentioned in the previous chapters).</p>
 <p>Please click <a href="https://bl.ocks.org/sunyiyangallan/raw/13bed51f18a1e4f2e0834f5ef52ee637/69016912fdce8e3749809507d6a58d2e6638fab1/">this link</a> to view our interactive plot (<a href="https://bl.ocks.org/sunyiyangallan/raw/13bed51f18a1e4f2e0834f5ef52ee637/69016912fdce8e3749809507d6a58d2e6638fab1/" class="uri">https://bl.ocks.org/sunyiyangallan/raw/13bed51f18a1e4f2e0834f5ef52ee637/69016912fdce8e3749809507d6a58d2e6638fab1/</a>). It may take sometime to load the plot.</p>
-<p>The D3 <a href="(https://bl.ocks.org/sunyiyangallan/13bed51f18a1e4f2e0834f5ef52ee637/69016912fdce8e3749809507d6a58d2e6638fab1)">code</a> is also uploaded to blockbuilder.org</p>
+<p>The D3 <a href="(https://bl.ocks.org/sunyiyangallan/13bed51f18a1e4f2e0834f5ef52ee637/69016912fdce8e3749809507d6a58d2e6638fab1)">code</a> is also uploaded to blockbuilder.org; which is also on our project’s GitHub Repo (<a href="https://github.com/tonyytliu/world_conflict_data/tree/master/d3_interactive/code" class="uri">https://github.com/tonyytliu/world_conflict_data/tree/master/d3_interactive/code</a>).</p>
 <p>The total numbers of deaths every year and every country are calculated using D3.</p>
 <p>Instructions for using the plot:</p>
 <ol style="list-style-type: decimal">
